# my-app

./: .gitignore  benchmark.txt  package.json  pbjs -t static-module -w commonjs -o src  vite.config.ts
rust_wasm_deserialize/: Cargo.toml  build.rs
rust_wasm_deserialize/src/: ```rs.rs  lib.rs  my_model.fbs  my_model.proto  my_model_fb_toolkit.rs  my_model_generated.rs
src/: App.tsx  my_model.ts  mypackage.ts
src/features/counter/: Counter.tsx  counterSlice.spec.ts  counterSlice.ts
src/features/rust-wasm-benchmark/: Benchmark.tsx  concatenateUint8Arrays.tsx  deserialize_fb.ts  generateTestData.ts  js_native_deserialize_buffers.tsx  processProtobufs.tsx  processProtobufsNew.tsx  runTest.tsx  saveAsFile.ts  serialize.ts  utils.tsx
src/my-schema/: compiled.d.ts  compiled.js
src/mypackage/: custom-map-.ts  custom-map.ts  my-model.ts
src/mypackage/custom-map-/: bentry.ts  dentry.ts  lentry.ts  sentry.ts
