[package]
name = "rust_wasm_deserialize"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.10"
prost-types = "0.10"
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
serde_json = "1.0"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
prost-build = "0.10"
