[package]
name = "rust_wasm_deserialize"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = "0.12.3"
prost-types = "0.12"
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
serde_json = "1.0"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
gloo-utils = "0.2.0"
web-sys = { version = "0.3.66", features = ["Performance"] }
flatbuffers = "23.5.26"

[build-dependencies]
prost-build = "0.10"
